cmake_minimum_required(VERSION 3.10)
project(ersatz-jjy VERSION 0.3)
set(CMAKE_C_STANDARD 11)
set(CMAKE_C_STANDARD_REQUIRED True)
configure_file(ersatz-jjy-config.h.in ersatz-jjy-config.h)
add_executable(ersatz-jjy ersatz-jjy.c)
add_executable(ersatz-wwvb ersatz-wwvb.c)
include(FindPkgConfig)
pkg_check_modules(PA REQUIRED IMPORTED_TARGET portaudio-2.0)
target_link_libraries(ersatz-jjy ${PA_LINK_LIBRARIES})
target_include_directories(ersatz-jjy PUBLIC ${PA_INCLUDE_DIRS})
target_include_directories(ersatz-jjy PUBLIC ${PROJECT_BINARY_DIR})
target_link_libraries(ersatz-wwvb ${PA_LINK_LIBRARIES})
target_include_directories(ersatz-wwvb PUBLIC ${PA_INCLUDE_DIRS})
target_include_directories(ersatz-wwvb PUBLIC ${PROJECT_BINARY_DIR})
install(TARGETS ersatz-jjy ersatz-wwvb)
